--- a/debian/etc/webshop/skel/application/svelte.ini
+++ b/debian/etc/webshop/skel/application/svelte.ini
@@ -1,36 +1,63 @@
-[svelte]
-; Svelte - a rapid web application development enviroment for 'best practice' web developers.
-; COPYRIGHT: Copyright 2011 Justified Ltd. All rights reserved.
-; AUTHOR: Matt Renyard (matt@justified-online.co.uk)
-; PACKAGE: uk.ltd.justified.local.[package_name]
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; RAMP - Rapid web application development enviroment for
+;  building flexible, customisable web systems.
+;
+; AUTHOR: Matt Renyard (renyard.m@gmail.com)
+; PACKAGE: RAMP.local
 ; VERSION: 0.0.9;
 
-;;;;;;;;;;;;;;;;;;;;
-; About svelte.ini ;
-;;;;;;;;;;;;;;;;;;;;
-; Svelte's local initialization file, generally called svelte.ini, is responsible for configuring
-; the local aspects of an indervidual Svelte Project and SHOULD usually be located alongside the
+;;;;;;;;;;;;;;;;;;;
+; About RAMP.ini
+;
+; RAMP's local initialization file, generally called RAMP.ini, is responsible for configuring
+; the local aspects of an individual RAMP Project and SHOULD usually be located alongside the
 ; public website root folder. i.e.: -- ~/                    (secure ftp folder)
 ;                                    |
 ;                                    +-- public_html         (website root folder)
+;                                    | |-- 404.php           (404 symlink to controller.php)
 ;                                    | |-- index.html        (static homepage)?
 ;                                    | |-- robots.txt
 ;                                    | |-- humans.txt
-;                                    | |-- controller.php    (svelte controller file)
+;                                    | |-- controller.php    (RAMP controller file)
 ;                                    |
-;                                    +-- svelte.info         (local initialization file)
-
+;                                    +-- ramp.ini          (local initialization file)
+;
 ; The syntax of the file follows the same conventions as 'php.ini' and therefore is extremely
 ; simple.  Whitespace and Lines beginning with a semicolon are silently ignored. Section headers
-; (e.g. [Foo]) are also silently ignored, even though they might mean something in the future.
+; (e.g. [RAMP], [foo]) are used throughout this configuration file.
 
-local_dir = /path/to/php/local/package
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-; Main application Database Setting ;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;
+; Local RAMP settings
+[RAMP]
 
-; Database connection String
+; Domain under which this application is run
+;domain =
+
+; Directory from which to locate application specific code
+; related only to this particular project
+;local_dir =
+
+; Concrete BusinessModelManager used to handle data layer
+; (fully qualified namespace and class name)
+; e.g. ramp\model\business\SQLBusinessModelManager
+;business_model_manager =
+
+; Fully qualified namespace for BusinessModel classes
+; e.g. ramp\model\business
+;business_model_namespace =
+
+; Authenticatible Unit of specific business model
+; MUST have property email as a required field
+; e.g. Person or Organisation
+;authenticatible_unit =
+
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Model Manager Database Setting
+[database]
+
+; Database connection string
 ; replace [host] and [dbname] where appropriate
 ; - MS SQL Server and Sybase with PDO_DBLIB
 ; -- dbconnection = mssql:host=[host];dbname=[dbname]
@@ -39,13 +66,56 @@ local_dir = /path/to/php/local/package
 ; -- dbconnection = mysql:host=[host];dbname=[dbname]
 ; - SQLite Database
 ; -- dbconnection = sqlite:my/database/path/database.db
-db_connection = sqlite:/path/to/database.db
+;connection =
 
 ; Database user name
-db_user = root
+;user =
 
 ; Database password
-;db_password = password
+;password =
 
-; Maximum rows returned in an single query
-sql_max_results = 100
+; Maximum rows to display on a single page from a single query
+; - defaults to 25 if not set
+;max_results =
+
+
+;;;;;;;;;;;;;;;;;;;;
+; Security settings
+[security]
+
+; SALT value used for password encryption.
+; DO NOT CHANGE THIS VALUE ONCE SITE IS LIVE!
+;password_salt =
+
+
+;;;;;;;;;;;;;;;;;;
+; E-Mail Settings
+[email]
+
+; Name to be used when sending e-mail
+; e.g. "Administration Team"
+;from_name = 
+
+; Sender's e-mail address
+; e.g. no-reply@domain.com
+;from_address =
+
+; 'Reply' to e-mail address
+; e.g. enquires@domain.com
+;reply_address =
+
+; Templete for the welcome email
+; sent at regisitration
+; includes login details and
+; enencripted auto generated password
+;welcome_template = welcome-email
+
+; Welcome email template type one of (html|text) 
+;welcome_template_type =
+
+; Welcome email subject line.
+; The single line of text people see when they receive your email.
+; This one line of text can often determine whether an email is opened
+; or sent straight to trash, so make sure it's optimized toward your audience.
+; e.g. Welcome to ... - All you need, login and more...
+;welcome_subject_line =
