--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 0.1
 Section: base
 Priority: optional
 Architecture: all
-Depends: bash, apache2-webshop-conf, certbot, python3-certbot-apache, httrack, mmv
+Depends: bash, apache2-webshop-conf, httrack, mmv
 Enhances: ramp
 Maintainer: renyard.m@gmail.com
 Description: Web Project Management Tools for WebShop.
